[package]
name = "hcli"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
confy = { version = "0.5", features = ["yaml_conf"], default-features = false }
clap = { version = "4.0.18", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["json"] }
serde_json = "1"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
