[package]
name = "hcli"
version = "0.1.0"
authors = ["Ragnyll <ragnyll@gallowzhumour.dev>"]
edition = "2021"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0"
confy = { version = "0.5", features = ["yaml_conf"], default-features = false }
reqwest = { version = "0.11.12", features = ["json"] }
serde_json = "1"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
http = "0.2.8"
clap = { version = "4.0.18", features = ["derive"] }
